Changed project name. Added compression quality options. Added video timeline on hover and fullscreen functionallity.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,5 +65,5 @@ jobs:
           path: |
             **\electron-builder*.log
             **\app-builder*.log
-            C:\Users\runneradmin\AppData\Roaming\Clipfolio\logs\*
+            C:\Users\runneradmin\AppData\Roaming\video-clip-manager\logs\*
             C:\Users\runneradmin\AppData\Roaming\*\logs\*
